add version to web interface

--- a/index.htm
+++ b/index.htm
@@ -221,7 +221,6 @@
             <a id="backupSettings" target="_blank" download="P4.bak.json" href="javascript:" data-i18n>Backup Files and Settings.</a>
             <a id="restoreSettings" href="javascript:" data-i18n>Restore a Backup.</a>
             <a id="reportBugs" href="http://algos.inesc-id.pt/arq-comp/?&mailform" target="_blank" data-i18n>Report bugs.</a>
-
         </span>
         <span>
             <span data-i18n>Language</span>:
@@ -229,6 +228,8 @@
                 <option value="en">English</option>
                 <option value="pt">Português</option>
             </select>
+            <span data-i18n>Version</span>:
+            <span>1.0.7</span>
         </span>
     </div>
     <input type="file" id="fileUpload" style="display: none;" />
